Project2/force-app/main/default/objects/Drink__c/Drink__c.object-meta.xml
<CustomObject>
    <label>Drink</label>
    <nameField>
        <label>Drink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>