Project2/force-app/main/default/objects/Drink__c/fields/Alcoholic__c.field-meta.xml
<CustomField>
    <fullName>Alcoholic__c</fullName>
    <label>Alcoholic</label>
    <length>40</length>
    <type>Text</type>
</CustomField>