Project2/force-app/main/default/objects/Drink__c/fields/drinkIngredients__c.field-meta.xml
<CustomField>
    <fullName>drinkIngredients__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>drinkIngredients</label>
    <referenceTo>Ingredients_List__c</referenceTo>
    <relationshipLabel>Cocktails</relationshipLabel>
    <relationshipName>Cocktails</relationshipName>
    <type>Lookup</type>
</CustomField>