Project2/force-app/main/default/objects/Drink__c/fields/Glass__c.field-meta.xml
<CustomField>
    <fullName>Glass__c</fullName>
    <label>Glass</label>
    <length>40</length>
    <type>Text</type>
</CustomField>