Project2/force-app/main/default/objects/Drink__c/fields/idDrink__c.field-meta.xml
<CustomField>
    <fullName>idDrink__c</fullName>
    <label>idDrink</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>