Project2/force-app/main/default/objects/Drink__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(Thumbnail__c, Thumbnail__c ,150,150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>