Project2/force-app/main/default/objects/Drink__c/fields/Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Ingredients__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ingredients</label>
    <referenceTo>Ingredient__c</referenceTo>
    <relationshipLabel>Drinks</relationshipLabel>
    <relationshipName>Drinks</relationshipName>
    <type>Lookup</type>
</CustomField>