Project2/force-app/main/default/objects/Drink__c/fields/IngreMeas__c.field-meta.xml
<CustomField>
    <fullName>IngreMeas__c</fullName>
    <label>IngreMeas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>