Project2/force-app/main/default/objects/Drink__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <label>Thumbnail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>