Project2/force-app/main/default/objects/Drink__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Alcoholic__c</columns>
    <columns>drinkIngredients__c</columns>
    <columns>IngreMeas__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>